--- a/index.html
+++ b/index.html
@@ -147,7 +147,19 @@
             enfatizava a existência de uma causa primeira ou "motor imóvel".
         </p>
     </div>
-
+    
+    <div class="title" id="metafisica">
+        <section class="title__content">
+            <h1>Teste sobre a <b>Doutrina do Meio-Termo</b></h1>
+        </section>
+    </div>
+    
+    <div class="text">
+        <a class="btn btn-primary" href="Doutrina do Meio-Termo.zip" role="button"><p><b>Clique aqui para baixar o zip do teste</b></p></a>
+        <br><br>
+        <p>Após baixar a pasta zipada faça o seguinte: 1º passo -> descompacte a pasta; 2º passo -> Abra a pata e execute o atalho nomeado como "Doutrina do Meio-Termo ---- Iniciar Teste"; 3º passo -> Faça o teste!</p>
+    </div>
+ 
     <!-- Citação final com estilo alterado -->
     <blockquote class="blockquote text-center blockquote-final">
         <p class="mb-0">"A felicidade é o significado e o propósito da vida, o objetivo e o fim da existência humana."</p>
