--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     </div>
     
     <div class="text">
-        <a class="btn btn-primary" href="Doutrina do Meio-Termo.zip" role="button"><p><b>Clique aqui para baixar o zip do teste</b></p></a>
+        <a class="btn btn-primary" href="https://drive.google.com/file/d/1CvBW4_vmMW-pRounoWuDZ1EbI9pmJLQh/view?usp=sharing" role="button"><p><b>Clique aqui para baixar o zip do teste</b></p></a>
         <br><br>
-        <p>Após baixar a pasta zipada faça o seguinte: 1º passo -> descompacte a pasta; 2º passo -> Abra a pata e execute o atalho nomeado como "Doutrina do Meio-Termo ---- Iniciar Teste"; 3º passo -> Faça o teste!</p>
+        <p>Após baixar a pasta zipada faça o seguinte: 1º passo -> Baixe e descompacte a pasta; 2º passo -> Abra a pata e execute o atalho nomeado como "Doutrina do Meio-Termo ---- Iniciar Teste"; 3º passo -> Faça o teste!</p>
     </div>
  
     <!-- Citação final com estilo alterado -->
