--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li class="nav-item"><a class="nav-link" href="#causas">Teoria das Causas</a></li>
                 <li class="nav-item"><a class="nav-link" href="#logica">Lógica</a></li>
                 <li class="nav-item"><a class="nav-link" href="#metafisica">Metafísica</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Teste_Doutrina_do_Meio-Termo">Teste da Doutrina do Meio-Termo</a></li>
             </ul>
         </div>
     </nav>
@@ -148,16 +149,18 @@
         </p>
     </div>
     
-    <div class="title" id="metafisica">
+    <div class="title" id="Teste_Doutrina_do_Meio-Termo">
         <section class="title__content">
             <h1>Teste sobre a <b>Doutrina do Meio-Termo</b></h1>
         </section>
     </div>
     
     <div class="text">
+    <p class="text__paragraph">
         <a class="btn btn-primary" href="https://drive.google.com/file/d/1CvBW4_vmMW-pRounoWuDZ1EbI9pmJLQh/view?usp=sharing" role="button"><p><b>Clique aqui para baixar o zip do teste</b></p></a>
         <br><br>
         <p>Após baixar a pasta zipada faça o seguinte: 1º passo -> Baixe e descompacte a pasta; 2º passo -> Abra a pata e execute o atalho nomeado como "Doutrina do Meio-Termo ---- Iniciar Teste"; 3º passo -> Faça o teste!</p>
+    </p>
     </div>
  
     <!-- Citação final com estilo alterado -->
